# AIUX-Analysis-from-User-Data

./: .env  .env.local  .gitignore  README.md  ab_testing.py  advanced_prediction.py  advanced_visualization.py  ai_recommendations.py  analyzer.py  auth_handler.py  chatbot_component.py  config.py  crud.py  csv_handler.py  dashboard_components.py  dashboard_ui.py  data_connector.py  data_processor.py  database.py  init_db.py  integration.py  main.py  models.py  optimization_manager.py  pyproject.toml  requirements.txt  revenue_prediction.py  run.sh  shopaiinsight.db  shopify_client.py  shopify_integration.py  test_connection.py  test_db.py  test_openai.py  test_shopify.py  test_ssl.py
@/components/: dashboard-tabs.tsx  store-chat-interface.tsx
app/api/chat/: route.ts
assets/: style.css
attached_assets/: Pasted--Shopify-Analytics-Dashboard-Shop-URL-e-g-your-store-myshopify-com-https-test-store-inclubale-1738728128310.txt
data/: shop_ai.db  shopai_predictai.db
src/: data_processor.py  learning_system.py  ml_engine.py  openai_manager.py  shopify_integration.py  visualization.py
utils/: error_handler.py  error_recovery.py  imports.py  loading.py  validation.py
